kubernetes/apps/cilium/gateway-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname homelab.themacdonald.house
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: "*.themacdonald.house"
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: "*.themacdonald.house"
      name: https
      port: 443
      protocol: HTTPS
